--- a/2-Pandas/00-EXAMPLE-WaterFlowDemo.ipynb
+++ b/2-Pandas/00-EXAMPLE-WaterFlowDemo.ipynb
@@ -31,6 +31,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Get today's date as a variable using the datetime package\n",
+    "from datetime import datetime\n",
+    "today = datetime.today().strftime('%Y-%m-%d')\n",
+    "print(today)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -49,7 +61,7 @@
     "       'format=rdb&' +\n",
     "       'sites=02087500&' +\n",
     "       'startDT=1930-10-01&' +\n",
-    "       'endDT=2020-09-30&' +\n",
+    "       f'endDT={today}&' +\n",
     "       'statCd=00003&' +\n",
     "       'parameterCd=00060&' +\n",
     "       'siteStatus=all')\n",
@@ -167,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -181,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
