Scientific Computing lessons

--- a/1-NumPy/X_NumpyExercises.ipynb
+++ b/1-NumPy/X_NumpyExercises.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +29,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.19534306, 0.98725283, 0.32144554, 0.43665877, 0.52092128,\n",
+       "       0.99185892, 0.4512966 , 0.46528795, 0.42855089, 0.42164073,\n",
+       "       0.03478829, 0.41085605, 0.63824602, 0.79883719, 0.70045127,\n",
+       "       0.13252944, 0.96171051, 0.72157607, 0.1310275 , 0.43826953,\n",
+       "       0.39504279, 0.75529867, 0.79063578, 0.04852885, 0.5892303 ,\n",
+       "       0.86035591, 0.73844954, 0.50345922, 0.80521448, 0.92585221,\n",
+       "       0.87377377, 0.23575141, 0.88926495, 0.43608169, 0.69485928,\n",
+       "       0.59606518, 0.46230774, 0.04288529, 0.25379888, 0.15070365,\n",
+       "       0.94760425, 0.53791765, 0.62965182, 0.1463806 , 0.29600102,\n",
+       "       0.70063342, 0.3323304 , 0.56427427, 0.73583733, 0.5649425 ,\n",
+       "       0.05617873, 0.33023866, 0.07427347, 0.97744051, 0.1546918 ,\n",
+       "       0.86850714, 0.87487524, 0.0962033 , 0.13467626, 0.49267617,\n",
+       "       0.19393684, 0.316166  , 0.7439104 , 0.37770906, 0.69287993,\n",
+       "       0.63753284, 0.50990078, 0.219774  , 0.47966486, 0.32343292,\n",
+       "       0.48182611, 0.30777753, 0.41054541, 0.31251079, 0.38951622,\n",
+       "       0.41920183, 0.03006322, 0.63534683, 0.36499249, 0.28348955,\n",
+       "       0.54538339, 0.81161569, 0.1901127 , 0.8239227 , 0.57574045,\n",
+       "       0.16570632, 0.72255345, 0.00380175, 0.56152322, 0.0162981 ,\n",
+       "       0.23639053, 0.32176635, 0.28755952, 0.44606478, 0.3435785 ,\n",
+       "       0.97274614, 0.85913005, 0.71246477, 0.08470107, 0.29040807])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Create a random array of 100 values between 0 and 1\n",
-    "arr_1 = \n",
+    "arr_1 = np.random.rand(100)\n",
     "\n",
     "#Display the resulting array\n",
     "arr_1"
@@ -42,49 +72,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100,)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Report the shape of the resulting array\n"
+    "#Report the shape of the resulting array\n",
+    "arr_1.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Report the data type of the resulting array\n"
+    "#Report the data type of the resulting array\n",
+    "arr_1.dtype"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.47853087686279094"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Remote the mean value of all values in your array\n"
+    "#Remote the mean value of all values in your array\n",
+    "arr_1.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([19.5343064 , 98.72528321, 32.14455398, 43.6658768 , 52.09212839,\n",
+       "       99.18589167, 45.12965977, 46.52879454, 42.85508869, 42.16407299,\n",
+       "        3.47882881, 41.08560519, 63.82460164, 79.88371851, 70.04512687,\n",
+       "       13.25294436, 96.1710514 , 72.1576071 , 13.10275018, 43.82695275,\n",
+       "       39.5042794 , 75.52986698, 79.06357832,  4.85288482, 58.92303   ,\n",
+       "       86.03559066, 73.84495441, 50.34592225, 80.5214485 , 92.58522122,\n",
+       "       87.3773769 , 23.57514085, 88.92649456, 43.60816857, 69.48592808,\n",
+       "       59.60651839, 46.23077364,  4.28852856, 25.37988768, 15.07036524,\n",
+       "       94.76042494, 53.791765  , 62.96518169, 14.63805969, 29.60010227,\n",
+       "       70.06334184, 33.23304018, 56.42742658, 73.58373259, 56.4942497 ,\n",
+       "        5.6178726 , 33.0238656 ,  7.42734651, 97.74405076, 15.46918034,\n",
+       "       86.85071356, 87.48752388,  9.62033032, 13.46762577, 49.26761706,\n",
+       "       19.39368434, 31.61659973, 74.39103998, 37.77090586, 69.28799317,\n",
+       "       63.75328384, 50.99007817, 21.97739997, 47.96648628, 32.34329242,\n",
+       "       48.18261114, 30.77775262, 41.05454072, 31.2510787 , 38.95162209,\n",
+       "       41.92018264,  3.00632184, 63.53468315, 36.49924899, 28.34895469,\n",
+       "       54.53833888, 81.16156944, 19.01126995, 82.39227014, 57.57404526,\n",
+       "       16.57063226, 72.25534495,  0.38017542, 56.15232192,  1.62980965,\n",
+       "       23.63905271, 32.17663499, 28.75595181, 44.60647772, 34.35785025,\n",
+       "       97.27461362, 85.91300458, 71.2464773 ,  8.47010727, 29.040807  ])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Multiply each value in your array to get values between 0 and 100, saving the results as \"arr_2\"\n",
-    "arr_2 = "
+    "arr_2 = arr_1*100\n",
+    "arr_2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[19.5343064 , 98.72528321, 32.14455398, 43.6658768 ],\n",
+       "       [52.09212839, 99.18589167, 45.12965977, 46.52879454],\n",
+       "       [42.85508869, 42.16407299,  3.47882881, 41.08560519],\n",
+       "       [63.82460164, 79.88371851, 70.04512687, 13.25294436],\n",
+       "       [96.1710514 , 72.1576071 , 13.10275018, 43.82695275],\n",
+       "       [39.5042794 , 75.52986698, 79.06357832,  4.85288482],\n",
+       "       [58.92303   , 86.03559066, 73.84495441, 50.34592225],\n",
+       "       [80.5214485 , 92.58522122, 87.3773769 , 23.57514085],\n",
+       "       [88.92649456, 43.60816857, 69.48592808, 59.60651839],\n",
+       "       [46.23077364,  4.28852856, 25.37988768, 15.07036524],\n",
+       "       [94.76042494, 53.791765  , 62.96518169, 14.63805969],\n",
+       "       [29.60010227, 70.06334184, 33.23304018, 56.42742658],\n",
+       "       [73.58373259, 56.4942497 ,  5.6178726 , 33.0238656 ],\n",
+       "       [ 7.42734651, 97.74405076, 15.46918034, 86.85071356],\n",
+       "       [87.48752388,  9.62033032, 13.46762577, 49.26761706],\n",
+       "       [19.39368434, 31.61659973, 74.39103998, 37.77090586],\n",
+       "       [69.28799317, 63.75328384, 50.99007817, 21.97739997],\n",
+       "       [47.96648628, 32.34329242, 48.18261114, 30.77775262],\n",
+       "       [41.05454072, 31.2510787 , 38.95162209, 41.92018264],\n",
+       "       [ 3.00632184, 63.53468315, 36.49924899, 28.34895469],\n",
+       "       [54.53833888, 81.16156944, 19.01126995, 82.39227014],\n",
+       "       [57.57404526, 16.57063226, 72.25534495,  0.38017542],\n",
+       "       [56.15232192,  1.62980965, 23.63905271, 32.17663499],\n",
+       "       [28.75595181, 44.60647772, 34.35785025, 97.27461362],\n",
+       "       [85.91300458, 71.2464773 ,  8.47010727, 29.040807  ]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Reshape the array above to be 25 rows and 4 columns, saving the result as \"arr_3\"\n",
-    "arr_3 = "
+    "arr_3 = arr_2.reshape(25,4)\n",
+    "arr_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([42.85508869, 42.16407299,  3.47882881, 41.08560519])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Show the 3rd row of this array\n",
+    "arr_3[2,]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([98.72528321, 99.18589167, 42.16407299, 79.88371851, 72.1576071 ,\n",
+       "       75.52986698, 86.03559066, 92.58522122, 43.60816857,  4.28852856,\n",
+       "       53.791765  , 70.06334184, 56.4942497 , 97.74405076,  9.62033032,\n",
+       "       31.61659973, 63.75328384, 32.34329242, 31.2510787 , 63.53468315,\n",
+       "       81.16156944, 16.57063226,  1.62980965, 44.60647772, 71.2464773 ])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Show the values in the 2nd column of this array\n",
+    "arr_3[0:25,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56.783663651825506"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Show the mean of the values in the 2nd column\n",
+    "arr_3[0:25,1].mean()"
    ]
   },
   {
@@ -92,32 +292,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Show the 3rd row of this array\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Show the values in the 2nd column of this array\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Show the mean of the values in the 2nd column\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -131,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
